                - fieldset should be set for browser compatibility.
                


version 16.10
    commit #16.10.1
        - 16 September, 2016
        ==bug==
            -widget searchform did not work because I rewrote id="ws".
        ==code optimazation==
            -add nav to breadcrumb
            -add id to top-bar
        ==sitemap developing==
            -not display PDF, if there is none.
            /* Boolean filter
            * @ name: manduca_exclude_author_page
            * @ true : default : show authoer pages in sitemap
            * @ false : Do not use author pages

    commit #16.10.2
        20 Sept ,2016
            ==bug==
                - Author page __ function did not work (I do not know why)
            Author page: add website to author.php
            design: some style fixed.  (excerpt, header search )
    
    commit #16.10.3
        28 Sept, 2016
        -add class to image anchor in order to avoid border-bottom (code: https://gist.github.com/rugor/5418051)
        -remove adjacent_image_link function added in commit#16.7.2. Reason: not work fine in somogyivakok.hu
        -remove image link Font-Awesome icons
        -add svg to single post navigation.             
    
    commit #16.10.4
        18 Oct, 2016
        - remove ext-link class if the anchor is in-page (hash) link.
        - add breadcrumb as action hook (in order to    manipulate even better)
        -tiny design fixing: excerpt-header margin and padding
            
    commit #16.10.5
        28 Oct, 2016
        = bug = breadcrumb has wrong DOM ( missing end nav tag) fixed.
		*  Filter of inital text: manduca_breadcrumb_prefix
    commit #16.10.6
        3 November,2016
        - upload to repository as 16.10
        -blockquote nov a display element as default.
        -tiny fixings in code.
        
16.11
    commit #16.11.1
        9 November, 2016
        - replace fontawesome with svg
        -tiny design fixings. 